--- a/admin.html
+++ b/admin.html
@@ -177,6 +177,7 @@
         </div>
     </div>
 
+    <script src="js/firebase-config.js"></script>
     <script src="js/audio-handler.js"></script>
     <script src="js/queue-manager.js"></script>
     <script>
