--- a/display.html
+++ b/display.html
@@ -121,6 +121,7 @@
     <!-- Audio element for playing sounds -->
     <audio id="audioPlayer" style="display:none;"></audio>
 
+    <script src="js/firebase-config.js"></script>
     <script src="js/audio-handler.js"></script>
     <script>
         // Initialize
