--- a/control.html
+++ b/control.html
@@ -166,6 +166,7 @@
         <div id="statusMessage" class="hidden mt-6 p-4 rounded-lg text-center font-bold text-lg"></div>
     </div>
 
+    <script src="js/firebase-config.js"></script>
     <script src="js/audio-handler.js"></script>
     <script src="js/queue-manager.js"></script>
     <script>
