--- a/display.html
+++ b/display.html
@@ -178,9 +178,9 @@
                     // Load media files
                     if (settings.mediaPath) {
                         mediaFiles = [
-                            settings.mediaPath + 'health1.mp4',
-                            settings.mediaPath + 'health2.mp4',
-                            settings.mediaPath + 'health3.mp4'
+                            settings.mediaPath + '1.mp4',
+                            settings.mediaPath + '2.mp4',
+                            settings.mediaPath + '3.mp4'
                         ];
                     }
                 }
@@ -445,3 +445,4 @@
     </script>
 </body>
 </html>
+
