--- a/index.html
+++ b/index.html
@@ -90,13 +90,21 @@
         </div>
 
         <!-- Additional Tools -->
-        <div class="grid md:grid-cols-3 gap-8 mb-12">
+        <div class="grid md:grid-cols-4 gap-8 mb-12">
             <a href="test-firebase.html" target="_blank" class="card-hover bg-gradient-to-br from-yellow-600 to-yellow-800 rounded-xl shadow-xl p-6 text-center fade-in block" style="animation-delay: 0.5s">
                 <svg class="w-16 h-16 mx-auto mb-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
                 </svg>
                 <h3 class="text-2xl font-bold mb-2">🔥 اختبار Firebase</h3>
                 <p class="text-yellow-100">تحقق من الاتصال بقاعدة البيانات</p>
+            </a>
+
+            <a href="clinic-cards-preview.html" target="_blank" class="card-hover bg-gradient-to-br from-indigo-600 to-indigo-800 rounded-xl shadow-xl p-6 text-center fade-in block" style="animation-delay: 0.55s">
+                <svg class="w-16 h-16 mx-auto mb-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"/>
+                </svg>
+                <h3 class="text-2xl font-bold mb-2">🎨 معاينة الكروت</h3>
+                <p class="text-indigo-100">تصميم الكروت الجديد</p>
             </a>
 
             <a href="tts-backup.html" target="_blank" class="card-hover bg-gradient-to-br from-pink-600 to-pink-800 rounded-xl shadow-xl p-6 text-center fade-in block" style="animation-delay: 0.6s">
@@ -107,7 +115,7 @@
                 <p class="text-pink-100">اختبار نظام TTS الاحتياطي</p>
             </a>
 
-            <a href="qr-generator.html" target="_blank" class="card-hover bg-gradient-to-br from-teal-600 to-teal-800 rounded-xl shadow-xl p-6 text-center fade-in block" style="animation-delay: 0.6s">
+            <a href="qr-generator.html" target="_blank" class="card-hover bg-gradient-to-br from-teal-600 to-teal-800 rounded-xl shadow-xl p-6 text-center fade-in block" style="animation-delay: 0.7s">
                 <svg class="w-16 h-16 mx-auto mb-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z"/>
                 </svg>
@@ -117,7 +125,7 @@
         </div>
 
         <!-- Features Section -->
-        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-2xl p-8 mb-12 fade-in" style="animation-delay: 0.7s">
+        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-2xl p-8 mb-12 fade-in" style="animation-delay: 0.8s">
             <h2 class="text-4xl font-bold text-center mb-8">✨ المميزات</h2>
             <div class="grid md:grid-cols-3 gap-6">
                 <div class="text-center p-4">
@@ -154,7 +162,7 @@
         </div>
 
         <!-- Quick Start -->
-        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-2xl p-8 mb-12 fade-in" style="animation-delay: 0.8s">
+        <div class="bg-white bg-opacity-10 backdrop-blur-lg rounded-2xl p-8 mb-12 fade-in" style="animation-delay: 0.9s">
             <h2 class="text-4xl font-bold text-center mb-8">🚀 البدء السريع</h2>
             <div class="grid md:grid-cols-4 gap-6">
                 <div class="text-center">
@@ -181,7 +189,7 @@
         </div>
 
         <!-- Footer -->
-        <div class="text-center text-blue-200 fade-in" style="animation-delay: 0.9s">
+        <div class="text-center text-blue-200 fade-in" style="animation-delay: 1.0s">
             <p class="text-lg mb-2">نظام نداء المرضى © 2025</p>
             <p class="mb-4">تم التطوير بواسطة Claude 🤖</p>
             <div class="flex justify-center gap-6 text-sm">
