--- a/display.html
+++ b/display.html
@@ -102,7 +102,7 @@
                 <!-- Custom Name Display -->
                 <div id="customNameDisplay" class="hidden absolute inset-0 flex items-center justify-center bg-gradient-to-br from-blue-900 to-purple-900">
                     <div class="text-center animate-fade-in">
-                        <h2 class="text-6xl font-bold mb-4">🎉 مرحباً</h2>
+                        <h2 class="text-6xl font-bold mb-4">((( رسالة )))</h2>
                         <p class="text-8xl font-bold" id="customNameText"></p>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
     <!-- News Ticker -->
     <div class="bg-gradient-to-r from-red-600 to-red-700 py-3 overflow-hidden shadow-lg">
         <div class="marquee whitespace-nowrap text-2xl font-bold">
-            <span id="newsText">مرحباً بكم في مركزنا الطبي - نتمنى لكم الشفاء العاجل ⭐ أوقات العمل من 8 صباحاً حتى 10 مساءً</span>
+            <span id="newsText">مرحباً بكم في مركزنا الطبي - نتمنى لكم الشفاء العاجل ⭐ أوقات العمل من 8 صباحاً حتى 6 مساءً</span>
         </div>
     </div>
 
@@ -522,4 +522,5 @@
     </script>
 </body>
 </html>
+
 
